--- a/style.css
+++ b/style.css
@@ -391,11 +391,11 @@
 }
 
 .about__header{
-    background-image: url(images/P7.jpg);
+    background-image: url(images/P1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 80%;
-    height: 250px;
+    background-position: 50% 60%;
+    height: 28vh;
     z-index: 1;
 }
 
@@ -406,7 +406,7 @@
     color:#041e42;
     text-shadow: 1px 1px 2px #d6d2c4;
     font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
+    font-size: 4.5rem;
 }
 
 .about__main {
@@ -415,13 +415,26 @@
 }
 
 .roster__header {
+    background-image: url(images/P1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 80%;
-    height: 250px;
+    background-position: 50% 60%;
+    height: 28vh;
+    z-index: 1;
+}
+
+.roster__header h1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 80px;
+    color:#041e42;
+    text-shadow: 1px 1px 2px #d6d2c4;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 4.5rem;
 }
 
 .roster__container {
+    margin-top: 2rem;
     margin-left: 4rem;
     display: grid;
     grid-template-columns: 650px 650px;
