--- a/style.css
+++ b/style.css
@@ -19,20 +19,19 @@
 }
 
 .navbar__container {
-    display: flex;
-    justify-content: space-between;
     height: 80px;
     z-index: 99;
     width: 100%;
-    margin: 2 auto;
-    padding: 0px 0px 0px 8%;
+    padding: 0px 0px 0px 0px;
+}
 
+.navbar__wide {
+    display: flex;
+    justify-content: space-between;
 }
 
 #navbar__logo {
     background-size: 100%;
-    display: flex;
-    align-items: center;
     text-decoration: none;
     cursor: pointer;
     object-fit: contain;
@@ -43,6 +42,7 @@
     align-items: center;
     list-style: none;
     text-align: center;
+    width: 400px;
 }
 
 .navbar__item {
@@ -55,16 +55,15 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     height: 100%;
 }
 
 .navbar__btn{
     display: flex;
-    justify-content: center;
     align-items: center;
-    padding: 0 1rem;
-    width: 100%;
+    padding: 0rem 2rem;
+    width: 400px;
 }
 
 .button {
@@ -73,8 +72,8 @@
     align-items: center;
     text-decoration: none;
     padding: 10px 20px;
-    height: 100%;
-    width: 100%;
+    height: 75%;
+    width: 200px;
     border: none;
     outline: none;
     border-radius: 5px;
@@ -121,13 +120,26 @@
         opacity: 1;
         transition: all 0.5 ease;
         z-index: 99;
-        height: 70vh;
+        height: 90vh;
         font-size: 1.6rem;
     }
 
+    .navbar__btn {
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -600px;
+        opacity: 0;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+    }
+
     #navbar__logo{
+        margin-left: 20px;
         object-fit: contain;
-        margin: 0px 0px 0px 20px;
     }
 
     .navbar__toggle {
@@ -189,43 +201,39 @@
     background-image: url(images/P1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    height: 900px;
+    background-position: 50% 60%;
+    height: 90vh;
     z-index: 1;
 }
 
-.main__content h1 {
+.main__container {
     display: flex;
-    font-family: 'Montserrat';
-    font-size: 4rem;
-    justify-content: flex-start;
-    margin-left: 12%;
-    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.main__content {
+    margin: 4rem 8rem 12rem 8rem;
+}
+
+.main__content h1 {
+    font-size: 3.5rem; 
     color: #041e42;
     background-size: 100%;
     text-shadow: 2px 2px 2px #d6d2c4;
 }
 
 .main__content h2 {
-    display: flex;
-    font-size: 1.7rem;
-    justify-content: flex-start;
-    align-items: center;
-    margin-left: 12%;
+    font-size: 2rem;
     color: #d6d2c4;
     text-shadow: 2px 2px 2px #041e42;
     background-size: 100%;
-    padding-top: 80px;
 }
 
 .main__btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 1.2rem;
     background-color: #041e42;
     margin: auto;
-    margin-top: 50px;
     color: white;
     padding: 16px 32px;
     border: none;
@@ -263,36 +271,33 @@
     width: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
     .main__container {
-        display: grid;
-        grid-template-columns: auto;
+        display: flex;
         align-items: center;
-        justify-self: center;
+        justify-content: center;
+        height: fit-content;
         width: 100%;
-        margin: 0 0 0 0;
-        height: 90vh;
     }
 
     .main__content {
-        text-align: center;
+        text-align: left;
         margin-bottom: 4rem;
-
+        margin-left: 2rem;
     }
 
     .main__content h1 {
-        font-size: 3.5rem;
+        font-size: 4rem;
     }
 
     .main__content h2 {
-        font-size: 2rem;
+        font-size: 1.7rem;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .main__content {
-        text-align: center;
-        margin-top: 4rem;
+    .main__container {
+        justify-content: center;
     }
 
     .main__content h1 {
@@ -350,6 +355,7 @@
 
 @media (max-width: 1280px){
     .main2__container {
+        display: flex;
         flex-direction: column;
         height:fit-content;
         max-width: 1000px;
@@ -387,7 +393,6 @@
 .social__icon--link {
     color:#d6d2c4;
     font-size: 30px;
-
 }
 
 .about__header{
@@ -415,7 +420,7 @@
 }
 
 .roster__header {
-    background-image: url(images/P1.jpg);
+    background-image: url(images/Cooper.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 60%;
@@ -427,27 +432,24 @@
     display: flex;
     justify-content: center;
     padding-top: 80px;
-    color:#041e42;
-    text-shadow: 1px 1px 2px #d6d2c4;
+    color:#d6d2c4;
+    text-shadow: 1px 1px 2px #041e42;
     font-family: 'Montserrat', sans-serif;
     font-size: 4.5rem;
 }
 
 .roster__container {
-    margin-top: 2rem;
-    margin-left: 4rem;
     display: grid;
-    grid-template-columns: 650px 650px;
+    justify-content: center;
+    grid-template-columns: 550px 550px;
+    column-gap: 50px;
 }
 
 .card__container {
    display: flex;
-   justify-content: center;
    margin-top: 1.5rem;
    padding-bottom: 2rem;
    height: fit-content;
-   max-width: 625px;
-
 }
 
 .image-container {
@@ -458,7 +460,7 @@
 }
 
 .image-container img {
-    width: 125px;
+    width: 155px;
     justify-content: flex-start;
     position: sticky;
 }
@@ -471,7 +473,7 @@
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    max-height: 125px;
+    max-height: 155px;
 }
 
 
@@ -480,8 +482,6 @@
     background-color: #041e42;
     color: #fff;
     padding: 1rem;
-    text-align: center;
-    max-height: 65px;
 }
 
 .name {
@@ -489,19 +489,35 @@
 
 }
 
-
 .profile-body {
     display: flex;
     flex-grow: 2;
     justify-self: auto;
     padding: 10px;
-    max-height: 100px;
+    max-height: 150px;
 }
 
 .details {
     display: flex;
     flex: 1 1 100%;
     gap: 10px;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     font-size: 16px;
+}
+
+@media screen and (max-width: 1150px) {
+    .roster__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem 2rem 2rem 2rem;
+    }
+
+    .card__container{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
 }
