--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.2rem;
+    font-size: 1rem;
     position: sticky;
     top: 0;
     z-index: 99;
@@ -19,22 +19,24 @@
 }
 
 .navbar__container {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    position: relative;
     height: 80px;
     z-index: 99;
     width: 100%;
     padding: 0px 0px 0px 0px;
 }
 
-.navbar__wide {
-    display: flex;
-    justify-content: space-between;
-}
 
-#navbar__logo {
-    background-size: 100%;
-    text-decoration: none;
-    cursor: pointer;
-    object-fit: contain;
+#navbar__logo img {
+    width: 80px;
+    height: 80 px;
+    flex: 0 1 auto;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%)
 }
 
 .navbar__menu {
@@ -42,7 +44,7 @@
     align-items: center;
     list-style: none;
     text-align: center;
-    width: 400px;
+    margin-left: auto;
 }
 
 .navbar__item {
@@ -63,7 +65,6 @@
     display: flex;
     align-items: center;
     padding: 0rem 2rem;
-    width: 400px;
 }
 
 .button {
@@ -82,23 +83,30 @@
 }
 
 .button:hover {
-    background: #003da5;
+    background: #63666a;
     transition: all 0.3s ease;
 }
 
 .navbar__links:hover {
-    color: #63666a;
+    font-size: 1.1rem;
     transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1280px) {
     .navbar__container {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
+        position: relative;
         height: 80px;
         z-index: 999;
         max-width: 1300px;
         padding: 0px 0px 0px 0px;
+    }
+
+    .navbar__logo {
+        flex: 0 1 auto;
+        position: absolute;
+        transform: translateX(-50%);
     }
     
     .navbar__menu {
@@ -108,10 +116,10 @@
         width: 100%;
         position: absolute;
         top: -600px;
-        opacity: 0;
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
+        transform: translateX(-100%);
     }
 
     .navbar__menu.active {
@@ -120,8 +128,8 @@
         opacity: 1;
         transition: all 0.5 ease;
         z-index: 99;
-        height: 90vh;
-        font-size: 1.6rem;
+        height: 50vh;
+        font-size: 1.2rem;
     }
 
     .navbar__btn {
@@ -135,15 +143,19 @@
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
+        transform: translateX(-100%);
+
     }
 
-    #navbar__logo{
-        margin-left: 20px;
-        object-fit: contain;
-    }
-
-    .navbar__toggle {
-        margin-right: 20px;
+     .navbar__toggle {
+        flex: 0 1 auto;
+        margin-left: auto;
+        width: 50px;
+        height: 80px;
+        position: relative;
+        background-color: #fff;
+        cursor: pointer;
+        padding-right: 20px
     }
 
     .navbar__toggle .bar{
@@ -154,6 +166,9 @@
         background:#63666a;
         display: block;
         cursor: pointer;
+    }    
+    .navbar__item {
+        width: 100%;
     }
 
     .navbar__links {
@@ -163,18 +178,10 @@
         display: table;
     }
 
-    #mobile__menu {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-    }
-
     .navbar__btn {
         padding-bottom: 2rem;
     }
-
-    .button {
+    .button{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -182,6 +189,9 @@
         height: 80px;
         margin: 0;
     }
+    
+
+    
 
     #mobile-menu.is-active .bar:nth-child(2) {
         transform: translateY(11px) rotate(45deg);
@@ -201,7 +211,7 @@
     background-image: url(images/P1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 60%;
+    background-position: 50% 55%;
     height: 90vh;
     z-index: 1;
 }
@@ -214,19 +224,20 @@
 
 .main__content {
     margin: 4rem 8rem 12rem 8rem;
+    text-align: center;
 }
 
 .main__content h1 {
-    font-size: 3.5rem; 
-    color: #041e42;
+    font-size: 5.5rem; 
+    color: #fff;
     background-size: 100%;
-    text-shadow: 2px 2px 2px #d6d2c4;
+    text-shadow: 8px 8px 8px #041e42;
 }
 
 .main__content h2 {
     font-size: 2rem;
-    color: #d6d2c4;
-    text-shadow: 2px 2px 2px #041e42;
+    color: #fff;
+    text-shadow: 6px 6px 6px #041e42;
     background-size: 100%;
 }
 
@@ -235,7 +246,7 @@
     background-color: #041e42;
     margin: auto;
     color: white;
-    padding: 16px 32px;
+    padding: 16px 16px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -274,16 +285,16 @@
 @media screen and (max-width: 960px) {
     .main__container {
         display: flex;
-        align-items: center;
         justify-content: center;
         height: fit-content;
         width: 100%;
     }
 
     .main__content {
-        text-align: left;
-        margin-bottom: 4rem;
-        margin-left: 2rem;
+        display: inline-block;
+        width: 0;
+        line-height: 1.2; 
+        padding: 1px 0; 
     }
 
     .main__content h1 {
@@ -291,7 +302,11 @@
     }
 
     .main__content h2 {
-        font-size: 1.7rem;
+        font-size: 2rem;
+    }
+    
+    .main__btn {
+        transform: translateY(-50px);
     }
 }
 
@@ -350,7 +365,7 @@
 #img2 {
     max-width: 100%;
     max-height: 100%;
-    height: auto;
+    height: fit-content;
 }
 
 @media (max-width: 1280px){
@@ -365,7 +380,7 @@
 
 .footer__container {
     background-color: #041e42;
-    padding: 3rem 0;
+    padding: 0 0;
     display: flex;
 }
 
@@ -374,6 +389,7 @@
     cursor: pointer;
     flex: 2;
     margin-left: 8%;
+    align-items: center;
 }
 
 .footer__logo p{
@@ -396,7 +412,7 @@
 }
 
 .about__header{
-    background-image: url(images/P1.jpg);
+    background-image: url(images/Cooper.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 60%;
@@ -408,16 +424,28 @@
     display: flex;
     justify-content: center;
     padding-top: 80px;
-    color:#041e42;
-    text-shadow: 1px 1px 2px #d6d2c4;
+    color:#d6d2c4;
+    text-shadow: 3px 3px 3px #041e42;
     font-family: 'Montserrat', sans-serif;
     font-size: 4.5rem;
 }
 
 .about__main {
+    display: flex;
     background-color: white;
     margin: 2rem 2rem;
 }
+
+.about__content {
+    font-size: 1rem;
+    padding: 5% 5%
+}
+
+.about__content h2{
+    justify-self: flex-end;
+}
+
+
 
 .roster__header {
     background-image: url(images/Cooper.jpeg);
@@ -521,3 +549,4 @@
 @media screen and (max-width: 600px) {
 
 }
+
