--- a/style.css
+++ b/style.css
@@ -128,22 +128,16 @@
         opacity: 1;
         transition: all 0.5 ease;
         z-index: 99;
-        height: 50vh;
+        height: 70vh;
         font-size: 1.2rem;
     }
 
     .navbar__btn {
-        display: grid;
-        grid-template-columns: auto;
+        display: flex;
+        justify-content: space-around;
         margin: 0;
         width: 100%;
-        position: absolute;
-        top: -600px;
-        opacity: 0;
-        transition: all 0.5s ease;
-        height: 50vh;
-        z-index: -1;
-        transform: translateX(-100%);
+        z-index: 99;
 
     }
 
@@ -212,7 +206,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 55%;
-    height: 90vh;
+    height: 100vh;
     z-index: 1;
 }
 
@@ -223,7 +217,7 @@
 }
 
 .main__content {
-    margin: 4rem 8rem 12rem 8rem;
+    margin: 4rem 8rem 4rem 8rem;
     text-align: center;
 }
 
@@ -285,7 +279,7 @@
 @media screen and (max-width: 960px) {
     .main__container {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         height: fit-content;
         width: 100%;
     }
@@ -293,7 +287,7 @@
     .main__content {
         display: inline-block;
         width: 0;
-        line-height: 1.2; 
+        margin: 4em 8rem 2rem 8rem;
         padding: 1px 0; 
     }
 
@@ -305,9 +299,6 @@
         font-size: 2rem;
     }
     
-    .main__btn {
-        transform: translateY(-50px);
-    }
 }
 
 @media screen and (max-width: 480px) {
@@ -416,7 +407,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 60%;
-    height: 28vh;
+    height: 250px;
     z-index: 1;
 }
 
@@ -431,18 +422,171 @@
 }
 
 .about__main {
-    display: flex;
+    display: block;
     background-color: white;
-    margin: 2rem 2rem;
+    margin: 0 auto;
 }
 
+.about__container {
+    display: grid;
+    grid-template-columns: auto;
+    color:#041e42
+}
 .about__content {
-    font-size: 1rem;
-    padding: 5% 5%
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    gap: 25px;
+    padding: 2% 20%;
+}
+
+#abtimg {
+    display: flex;
+    border-radius: 20px;
+    width: auto;
+    height: 40vh;
+    grid-column: 1 / 2;
+    object-fit: contain;
+}
+
+#abtimg2 {
+    display: flex;
+    border-radius: 20px;
+    width: auto;
+    height: 40vh;
+    grid-column: 2 / 3;
+    object-fit: contain;
+}
+
+.Slideshow {
+    padding: 2% 2%;
+}
+
+.about__content2 {
+    background-color: #63666a;
+    height: 90vh;
+    position: relative;
+    margin: auto;
+    overflow: hidden;
+    display: flex;
+}
+
+.Slides {
+    display: none;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.caption {
+    color: #f2f2f2;
+    background: #041e42;
+    font-size: 1.3rem;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: -5px;
+    width: 100%;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.SlideTitle {
+    color: #fff;
+    font-size: 1.4rem;
+    padding: 8px 12px;
+    position: absolute;
+    top: 1;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #63666a;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+.ssimg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about__content3 {
+    padding: 5% 15%;
+    display: flex;
+    flex-direction: column;
 }
 
 .about__content h2{
-    justify-self: flex-end;
+    font-size: 2rem;
+}
+
+
+.about__content p{
+    font-size: 1.2rem;
+    grid-column: 1 / 4;
+    line-height: 1.5;
+}
+
+.about__content3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(50px, auto);
+    gap: 30px;
+}
+
+.about__content3 h2{
+    font-size: 2rem;
+}
+
+.about__content3 iframe{
+    grid-column: 1/2;
+
+}
+
+.about__content3 p{
+    font-size: 1.2rem;
+    line-height: 1.5;
+    grid-column: 2/4;
 }
 
 
