--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 55%;
-    height: 100vh;
+    height: 80vh;
     z-index: 1;
 }
 
@@ -277,6 +277,12 @@
     width: 100%;
 }
 
+.instagram{
+    display: flex;
+    padding-top: 2%;
+    justify-content: space-around;
+}
+
 @media screen and (max-width: 960px) {
     .main__container {
         display: flex;
@@ -314,6 +320,11 @@
     .main__content h2 {
         font-size: 2rem;
     }
+}
+
+.main2 {
+    display: flex;
+    justify-content: space-around;
 }
 
 .main2__container {
@@ -424,7 +435,7 @@
 
 .about__main {
     display: block;
-    background-color: white;
+    background-image: linear-gradient(to bottom right, white, #e5e5e5);
     margin: 0 auto;
 }
 
@@ -460,7 +471,9 @@
 }
 
 .Slideshow {
-    padding: 2% 2%;
+    margin: auto;
+    padding: 2% 0%;
+    max-width: 1200px;
 }
 
 .about__content2 {
@@ -702,11 +715,11 @@
 
 .watch__container {
     display: block;
-    background-color: #fff;
+    background-image: linear-gradient(to bottom right, white, #e5e5e5);
 }
 
 .shape {
-    padding: 2% 2% 0% 2%;
+    padding: 1% 2% 0% 2%;
 }
 
 .watch__header {
@@ -815,4 +828,51 @@
 .youtube {
     min-width: 400px;
     padding-top: 100px;
+}
+.shop {
+    background-image: linear-gradient(to bottom right, white, #e5e5e5);
+}
+
+.shop-header {
+    background-image: url(images/P7.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 77%;
+    height: 320px;
+    border-radius: 20px;
+    margin: 10px 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.shop-header h1 {
+    padding-top: 120px;
+    color:#f2f2f2;
+    text-shadow: 2px 2px 2px #041e42;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 5rem;
+    align-self: center;
+}
+
+.shop-main {
+    display: block;
+    margin: 0px 20px;
+}
+
+.shop-body1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    text-decoration: none;
+
+}
+
+.shop-card {
+    text-align: center;
+}
+
+.shop-image {
+    max-height: 400px;
+    border-radius: 20px;
+    border: 1px #041e42 solid;
 }
