--- a/style.css
+++ b/style.css
@@ -413,6 +413,8 @@
     font-size: 30px;
 }
 
+/*About CSS*/
+
 .about__header{
     background-image: url(images/Cooper.jpeg);
     background-size: cover;
@@ -436,38 +438,55 @@
     display: block;
     background-image: linear-gradient(to bottom right, white, #e5e5e5);
     margin: 0 auto;
+    padding: 2% 20%;
+
 }
 
 .about__container {
-    display: grid;
-    grid-template-columns: auto;
-    color:#041e42
+    color:#041e42;
 }
-.about__content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    gap: 25px;
-    padding: 2% 20%;
+
+.abt-imgs {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 2%;
+}
+
+.about__content p {
+    padding-bottom: 2%;
+    text-align: left;
 }
 
 #abtimg {
-    display: flex;
     border-radius: 20px;
     width: auto;
     height: 40vh;
     grid-column: 1 / 2;
     object-fit: contain;
+    padding: 5px;
 }
 
 #abtimg2 {
-    display: flex;
     border-radius: 20px;
     width: auto;
     height: 40vh;
     grid-column: 2 / 3;
     object-fit: contain;
+    padding: 5px;
 }
+
+.about__content h2{
+    font-size: 2rem;
+    padding-bottom: 12px;
+}
+
+
+.about__content p{
+    font-size: 1.2rem;
+    grid-column: 1 / 4;
+    line-height: 1.5;
+}
+
 
 .Slideshow {
     margin: auto;
@@ -476,12 +495,11 @@
 }
 
 .about__content2 {
-    background-color: #63666a;
-    height: 70vh;
     position: relative;
     margin: auto;
     overflow: hidden;
     display: flex;
+    width: fit-content;
     border-radius: 20px;
 }
 
@@ -516,7 +534,7 @@
 .caption {
     color: #f2f2f2;
     background: #041e42;
-    font-size: 1rem;
+    font-size: 0.9rem;
     padding: 8px 12px;
     position: absolute;  
     top: 60%; 
@@ -529,8 +547,8 @@
 
 .SlideTitle {
     color: #fff;
-    font-size: 1.4rem;
-    padding: 8px 12px;
+    font-size: 1.2rem;
+    margin: 8px 8px;
     position: absolute;
     right: 50%;
     left: 5%;
@@ -539,13 +557,13 @@
 
 .dot {
     cursor: pointer;
-    height: 15px;
-    width: 15px;
+    height: 12px;
+    width: 12px;
     margin: 0 2px;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 0.6s ease;
+    transition: #fff 0.6s ease;
 }
 
 .active, .dot:hover {
@@ -569,45 +587,106 @@
 }
 
 .about__content3 {
-    padding: 2% 20%;
-    display: flex;
-    flex-direction: column;
-}
-
-.about__content h2{
-    font-size: 2rem;
-}
-
-
-.about__content p{
-    font-size: 1.2rem;
-    grid-column: 1 / 4;
-    line-height: 1.5;
-}
-
-.about__content3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: minmax(50px, auto);
     gap: 30px;
+    padding-top: 2%;
 }
 
 .about__content3 h2{
+    color:#041e42;
     font-size: 2rem;
+    grid-column: 1/4;
 }
 
 .about__content3 iframe{
-    grid-column: 1/2;
+    grid-column: 3/4;
 
 }
 
 .about__content3 p{
     font-size: 1.2rem;
     line-height: 1.5;
-    grid-column: 2/4;
+    grid-column: 1/3;
+}
+
+@media (max-width: 1350px){
+
+    .about__content3 p {
+        font-size: .9em;
+        line-height: 2em;
+        padding-bottom: 20px;
+    }
+
+    .about__content3 {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 5%;
+    }
+
+    .about__content3 iframe {
+        align-self: center;
+    }
 }
 
 
+@media (max-width: 1200px){
+    .about__main {
+        padding: 2% 5%;
+    }
+
+    .about__content {
+        padding: 2%
+    }
+    
+    .about__content p {
+        display: flex;
+        font-size: 1em;
+        line-height: 2em;
+    }
+
+    .caption {
+        color: #f2f2f2;
+        font-size: .8em;
+        text-align: center;
+        top: 65%;
+    }
+}
+
+@media (max-width: 1100px) {
+   .abt-imgs {
+        flex-direction: column;
+        justify-self: center;
+   }
+
+   #abtimg {
+        border-radius: 20px;
+        height: auto;
+}
+
+    #abtimg2 {
+        border-radius: 20px;
+        height: auto;
+    }
+}
+
+@media (max-width: 670px) {
+    .caption {
+        color: #f2f2f2;
+        font-size: .7em;
+        text-align: left;
+        top: 64%;
+        left: 0;
+        width: 480px;
+    }
+
+    .SlideTitle {
+        font-size: 1em;;
+    }
+}
+
+/*Roster CSS*/
 
 .roster__header {
     background-image: url(images/Cooper.jpeg);
@@ -825,6 +904,9 @@
     min-width: 400px;
     padding-top: 100px;
 }
+
+/*Shop CSS*/
+
 .shop {
     background-image: linear-gradient(to bottom right, white, #e5e5e5);
 }
@@ -862,12 +944,73 @@
     text-decoration: none;
 }
 
-.shop-card {
+.shop-card1 {
     text-align: center;
 }
 
+.shop-card2 {
+    text-align: center;
+}
+
+.shop-card1 h1 {
+    font-size: 2em;
+}
+
+.shop-card2 h1 {
+    font-size: 1.2em;
+}
+
 .shop-image {
-    max-height: 400px;
+    max-width: 400px;
+    height: 400px;
     border-radius: 20px;
     border: 1px #041e42 solid;
+}
+
+.shop-image2 {
+    max-width: 300px;
+    height: 300px;
+    border-radius: 20px;
+    border: 1px #041e42 solid;
+}
+
+.shop-body2 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    text-decoration: none;
+    padding-bottom: 3em;
+    row-gap: 1em;
+}
+
+@media screen and (max-width: 1300px){
+    .shop-body1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .shop-body2 {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: minmax(100px, auto);
+    }
+
+    .shop-image {
+        max-width: 600px;
+        height: 600px;
+    }
+}
+
+@media screen and (max-width: 850px){
+
+    .shop-image {
+        max-width: 420px;
+        height: 420px;
+    }
+
+    .shop-body2 {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
