--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ html {
         transition: all 0.5 ease;
         z-index: 99;
         height: 70vh;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
     }
 
     .navbar__btn {
@@ -304,7 +304,6 @@ html {
     }
 
     .main__content {
-        display: inline-block;
         width: 0;
         margin: 4em 8rem 2rem 8rem;
         padding: 1px 0; 
@@ -320,9 +319,10 @@ html {
     
 }
 
-@media screen and (max-width: 480px) {
-    .main__container {
-        justify-content: center;
+@media screen and (max-width: 600px) {
+    .main__content {
+         margin: 4em 4rem 2rem 4rem;
+
     }
 
     .main__content h1 {
@@ -380,7 +380,6 @@ html {
 #img2 {
     max-width: 100%;
     max-height: 100%;
-    height: fit-content;
 }
 
 @media (max-width: 1280px){
@@ -827,11 +826,13 @@ html {
 .GURFC-card {
     width: 100px;
     height: 100px;
+    margin-top: 12px;
 }
 
 #watch-logo {
     max-width: 100%;
     max-height: 100%;
+    margin-top: 12px;
 }
 
 .opponent-card {
