--- a/style.css
+++ b/style.css
@@ -723,72 +723,106 @@ html {
     display: grid;
     justify-content: center;
     grid-template-columns: 550px 550px;
-    column-gap: 50px;
-    background-image: linear-gradient(to bottom right, white, #e5e5e5);
+    gap: 20px;
+    padding: 20px;
 }
 
 .card__container {
    display: flex;
-   margin-top: 1.5rem;
-   padding-bottom: 2rem;
-   height: fit-content;
+   margin-top: 1rem;
+   width: 550px;
+   border-radius: 10px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .image-container {
-    flex-grow: 1;
-    align-items: center;
-    max-height: 125px;
-    
+    align-items: center;  
+    height: 155px
 }
 
 .image-container img {
-    width: 155px;
-    justify-content: flex-start;
+    border-top-left-radius: 10px;  
+    border-bottom-left-radius: 10px;
+    height: 155px;
     position: sticky;
 }
 
 .profile__container {
-    flex-grow: 3;
+    display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    flex: 0 1 100%;
+    flex: 0 1 80%;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    max-height: 155px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 
 .profile-header {
-    display: flex;
     background-color: #041e42;
     color: #fff;
-    padding: 1rem;
+    padding: .8rem;
+    align-items: baseline;
 }
 
 .name {
-    font-size: 20px;
+    font-size: 18px;
 
 }
 
-.profile-body {
-    display: flex;
-    flex-grow: 2;
-    justify-self: auto;
-    padding: 10px;
-    max-height: 150px;
+.board-position {
+    font-size: .7rem;
+    color: #e2e2e2;
 }
 
 .details {
+    display: flex;
+    padding-top: 10px;
+    padding-left: 10px;
     font-size: 16px;
 }
+
 
 @media screen and (max-width: 1150px) {
     .roster__container{
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 2rem 2rem 2rem 2rem;
+        margin: 0 100px;
+    }
+
+    .card__container{
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .details {
+        font-size: 13px;
+    }
+
+    
+    .image-container img {
+        border-top-left-radius: 10px;  
+        border-bottom-left-radius: 10px;
+        height: 155px;
+        position: sticky;
+    }
+
+    .profile__container {
+        flex-direction: column;
+        flex: 0 1 80%;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+    }
+
+    .roster__container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 3% 0 3%;
     }
 
     .card__container{
