--- a/style.css
+++ b/style.css
@@ -1022,6 +1022,8 @@ html {
 
 #opp-logo {
   filter: drop-shadow(5px 5px 5px #444);
+  width: 80px;
+  height: 80px;
   max-width: 100%;
   max-height: 100%;
 }
