--- a/style.css
+++ b/style.css
@@ -1016,16 +1016,15 @@ html {
 }
 
 .opponent-card {
-  width: 80px;
-  height: 80px;
+  max-width: 80px;
+  max-height: 80px;
 }
 
 #opp-logo {
   filter: drop-shadow(5px 5px 5px #444);
-  width: 80px;
-  height: 80px;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 80px;
+  max-height: 80px;
+  object-fit: contain;
 }
 
 .watch__container {
