--- a/style.css
+++ b/style.css
@@ -284,6 +284,16 @@ html {
   width: 100%;
 }
 
+.schedule__container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.schedule__card {
+  display: inline-block;
+}
+
 .instagram {
   display: flex;
   padding-top: 2%;
@@ -883,6 +893,22 @@ html {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.animate__slideInUp:nth-child(1) {
+  animation-delay: 50ms;
+}
+
+.animate__slideInUp:nth-child(2) {
+  animation-delay: 100ms;
+}
+
+.animate__slideInUp:nth-child(3) {
+  animation-delay: 150ms;
+}
+
+.animate__slideInUp:nth-child(4) {
+  animation-delay: 200ms;
+}
+
 .image-container {
   align-items: center;
   height: 155px;
@@ -935,10 +961,13 @@ html {
 .details td {
   text-align: left;
   padding: 4px 4px;
-  width: 100px;
+  width: fit-content;
 }
 .details td:nth-child(1) {
-  width: 130px;
+  width: 100px;
+}
+.details td:nth-child(2) {
+  width: 70px;
 }
 
 .details td:nth-child(3) {
@@ -957,13 +986,20 @@ html {
 @media screen and (max-width: 600px) {
   .details {
     font-size: 13px;
+    height: 65px;
+    margin-top: auto;
+    margin-bottom: auto;
   }
 
   .image-container img {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    height: 155px;
+    height: 115px;
     position: sticky;
+  }
+
+  .profile-header {
+    height: 50px;
   }
 
   .profile__container {
@@ -981,8 +1017,17 @@ html {
     margin: 0 3% 0 3%;
   }
 
+  .name {
+    font-size: 15px;
+  }
+
+  .board-position {
+    font-size: 10px;
+  }
+
   .card__container {
     width: 100%;
+    height: 115px;
   }
 }
 
