--- a/style.css
+++ b/style.css
@@ -808,7 +808,7 @@ html {
   margin-top: 12px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .dropdown_button {
     background-color: #e2e2e2;
   }
@@ -935,9 +935,9 @@ html {
 }
 
 .profile__container {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  flex: 0 1 80%;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -946,6 +946,7 @@ html {
 }
 
 .profile-header {
+  display: flex;
   background-color: #041e42;
   color: #fff;
   padding: 0.8rem;
@@ -954,6 +955,7 @@ html {
 
 .name {
   font-size: 18px;
+  padding-right: 4%;
 }
 
 .board-position {
@@ -996,28 +998,48 @@ html {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .details {
-    font-size: 13px;
-    height: 65px;
-    margin-top: auto;
-    margin-bottom: auto;
+    font-size: 12px;
+    height: 50px;
+    margin-top: 4px;
+    margin-bottom: 6px;
+  }
+  .details th,
+  .details td {
+    text-align: left;
+    padding: 2px 0px;
+    width: fit-content;
+    font-size: 0.7rem;
+  }
+  .details td:nth-child(1) {
+    width: 96px;
+  }
+  .details td:nth-child(2) {
+    width: 64px;
+  }
+
+  .details td:nth-child(3) {
+    width: 130px;
+  }
+
+  .image-container {
+    height: 100px;
   }
 
   .image-container img {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    height: 115px;
+    height: 100%;
     position: sticky;
   }
 
   .profile-header {
-    height: 50px;
+    padding: 0.6rem;
   }
 
   .profile__container {
     flex-direction: column;
-    flex: 0 1 80%;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -1027,7 +1049,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 3% 0 3%;
+    margin: 0 0% 0 0%;
   }
 
   .name {
@@ -1040,7 +1062,7 @@ html {
 
   .card__container {
     width: 100%;
-    height: 115px;
+    height: 100px;
   }
 }
 
@@ -1058,6 +1080,7 @@ html {
 
 .next-match {
   z-index: 2;
+  display: none;
 }
 
 .score-table {
